variables
1. Create a variable called break and assign it a value 5. See what happens and find out the reason behind the behavior that you see

  
break=5

  break=5
         ^
SyntaxError: invalid syntax
  
2. Create two variables. One to store your birth year and another one to store current year. Now calculate your age using these two variables

year1,year2=2000,2024
age=year2-year1
print("Your age is: "+str(age))

  Your age is: 24
  
3. Store your first, middle and last name in three different variables and then print your full name using these variables

first,mid,last="Chaitanyasinh ","Jaydeepsinh ","Rathod"
print("Your name is: "+first+mid+last)

  Your name is: Chaitanyasinh Jaydeepsinh Rathod
  
4. Answer which of these are invalid variable names: "_nation, 1record, record1, record_one, record-one, record^one, continue"

  1record,recors-one,record^one,continue
  
